syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/property.proto";

message Payment {
  string payee = 1;
  string payer = 2;
  int32 amount = 3;
  PropertyInfo for_property = 4;
}